fixed spacing

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,9 @@
 .App {
   text-align: center;
   background-color: teal;
+  display: flex;
+  height: 100vh;
+  flex-flow: column;
 }
 
 Button{
@@ -16,10 +19,16 @@ Button{
 
 .App-footer{
   background-color: yellow;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
 }
 
 .App-body{
-  height: 5000px;
+  background-color: teal;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -37,6 +46,7 @@ Button{
   font-size: calc(10px + 2vmin);
   background-color: darkblue;
 }
+
 .App-details {
   min-height: 50h;
   display: flex;
@@ -60,16 +70,13 @@ Button{
 }
 
 .container{
+  margin: auto;
   background-color: blue;
   display:flex;
   justify-content: space-around;
   width: 80vw;
   max-width: 37.5em;
   padding: 3em 2.5em;
-  position: absolute;
-  transform: translate(-50%, -50%);
-  top: 50%;
-  left: 50%;
   border-radius: 0.62em;
   box-shadow: 0 1.25em 1.8em rgba(8, 21, 65, 0.25);
 }
